fixed "jumping" text in menu

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -877,6 +877,10 @@ a.wiki-page:visited {
     opacity: .3;
 }
 
+.collection-collected {
+    min-width: 4.5rem;
+}
+
 /* Custom checkbox styling */
 
 .input-checkbox-wrapper {
